Stripping Org References
Stripped ETC org references
New convention is KT, main is now Core and maybe Audio can be cleanly split out from it in the future

--- a/KettleToolsProject/Packages/com.etc.kettletools/Editor/KettleTools.Core.Editor.asmdef
+++ b/KettleToolsProject/Packages/com.etc.kettletools/Editor/KettleTools.Core.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "ETC.KettleTools.Editor",
+    "name": "KettleTools.Core.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:a791707b69bd212489a9f4e7fc5ca1e1"
