--- a/KettleToolsProject/Packages/com.etc.kettletools/package.json
+++ b/KettleToolsProject/Packages/com.etc.kettletools/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "com.etc.kettletools",
-  "displayName": "ETC - Kettle Tools",
-  "version": "0.0.5-preview",
+  "name": "com.mobtp.kt.core",
+  "displayName": "Kettle Tools Core",
+  "version": "0.1.0-preview",
   "unity": "2022.3",
   "description": "Tools for scene management, version control, and in-editor documentation for cross-team communication.\n\nDeveloped for collaboration within Building Virtual Worlds at the Entertainment Technology Center. Ideal for remote teams working on game jams.",
   "keywords": [
     "Kettle",
-    "KettleTools",
-    "BVW"
+    "KettleTools"
   ],
   "license": "MIT",
   "author": {
-    "name": "Ezra's BVW/ETC Tools",
-    "email": "elhill@andrew.cmu.edu",
+    "name": "Kettle Tools",
+    "email": "ezra@mobiusteapot.com",
     "url": "https://docs.google.com/document/d/1yekteNVaSSQttd15nJHdDJXYe4FqVXIe_DH4OFJcCPc/edit"
   },
-  "homepage": "https://help.etc.cmu.edu/xwiki/NEEDTOMAKEAPAGEFORTHIS",
+  "homepage": "https://github.com/mobiusteapot/KettleTools",
   "bugs": {
     "url": "https://github.com/mobiusteapot/KettleTools/issues",
-    "email": "support@NeedASupportEmail.com"
+    "email": "ezra@mobiusteapot.com"
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@github.com:mobiusteapot/com.etc.kettletools.git"
-  }
+    "url": "ssh://git@github.com:mobiusteapot/KettleTools.git"
+  },
+  "unityRelease": "8f1"
 }
