--- a/KettleToolsProject/Packages/com.etc.kettletools/Tests/Editor/KettleTools.CoreEditor.Tests.asmdef
+++ b/KettleToolsProject/Packages/com.etc.kettletools/Tests/Editor/KettleTools.CoreEditor.Tests.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "ETC.KettleTools.Editor.Tests",
+    "name": "KettleTools.Core.Editor.Tests",
     "rootNamespace": "",
     "references": [
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
