Changed namespaces + Fixed not having utils in a namespace
Major namespace overhaul
KT Core includes all utils since I'll be using them internally

Fixed inconsistent style and added the .editorconfig

--- a/KettleToolsProject/.vscode/settings.json
+++ b/KettleToolsProject/.vscode/settings.json
@@ -52,5 +52,6 @@
         "Temp/": true
     },
     "dotnet.preferCSharpExtension": true,
-    "dotnet.defaultSolution": "KettleToolsProject.sln"
+    "dotnet.defaultSolution": "KettleToolsProject.sln",
+    "editorconfig.generateAuto": false
 }
